[project]
name = "aioairzone"
version = "0.5.5"
description = "Library to control Airzone devices"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
keywords = ["airzone", "hvac", "home"] 
authors = [
  {name = "Álvaro Fernández Rojas", email = "noltari@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Home Automation",
]
dependencies = [
  "aiohttp"
]

[project.urls]
"Homepage" = "https://github.com/Noltari/aioairzone"

[tool.setuptools]
platforms = ["any"]
zip-safe = false
include-package-data = true

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
