[project]
name = "aioairzone"
version = "0.6.6"
description = "Library to control Airzone devices"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["airzone", "hvac", "home"] 
authors = [
  {name = "Álvaro Fernández Rojas", email = "noltari@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Home Automation",
]
dependencies = [
  "aiohttp"
]

[project.urls]
"Homepage" = "https://github.com/Noltari/aioairzone"
"Bug Tracker" = "https://github.com/Noltari/aioairzone/issues"

[tool.setuptools]
platforms = ["any"]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
"aioairzone_cloud" = ["py.typed"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
